--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:parentActivityName=".activity.DeciderActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.ExoplayerActivity"
+            android:name=".activity.CustomPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|navigation" />
         <activity
             android:name=".activity.SplashActivity"
